--- a/app/views/designers/_form.html.erb
+++ b/app/views/designers/_form.html.erb
@@ -1,4 +1,6 @@
-<%= form_with(model: @designer, local: true) do |form| %>
+<%= form_with(model: @designer, local: true,
+  data: { controller: "recaptcha", recaptcha_target: "form" }) do |form| %>
+
  <div class="error-message" style="color: red; display: none;"></div>
   <% if @designer.errors.any? %>
     <div style="color: red">
@@ -96,8 +98,7 @@
       </div>
 
   </div>
-
-  <%= hidden_field_tag :recaptcha_token, nil, id: "recaptcha_token" %>
+  <%= hidden_field_tag :recaptcha_token, nil, id: "recaptcha_token", data: { recaptcha_target: "token" } %>
 <% end %>
 
 <script>
