--- a/app/views/oeuvres/_oeuvre.html.erb
+++ b/app/views/oeuvres/_oeuvre.html.erb
@@ -380,7 +380,7 @@
             </div>
             <div class="naviguation-buttons">
               <%= link_to "Ajouter une autre référence", add_elements_path, class: "button" %>
-              <%= link_to "Retour", validation_path, class: "button" %>
+              <%= link_to "Retour", add_elements_path_path, class: "button" %>
             </div>
           </div>
         </div>
