--- a/app/assets/stylesheets/pages/_searchpage.scss
+++ b/app/assets/stylesheets/pages/_searchpage.scss
@@ -1,7 +1,7 @@
-@import 'abstracts/variables';
+@import "abstracts/variables";
 
 .suggestions-box {
-  border: 2px solid #E9E9E9;
+  border: 2px solid #e9e9e9;
   max-height: 400px;
   overflow-y: auto;
   position: absolute;
@@ -35,7 +35,6 @@
   margin-right: 16px;
 }
 
-
 .suggestion-item {
   padding: 20px 32px;
   cursor: pointer;
@@ -44,7 +43,7 @@
 }
 
 .suggestion-item:hover {
-  background-color: #F9F9F9;
+  background-color: #f9f9f9;
 }
 
 .section-title {
@@ -76,12 +75,11 @@
   font-weight: bold;
 }
 
-
 // Tabs
 .tabs {
   display: flex;
   margin-top: 48px;
-  border-bottom: 2px solid #E9E9E9;
+  border-bottom: 2px solid #e9e9e9;
   gap: 4px;
 }
 
@@ -100,7 +98,6 @@
   }
 }
 
-
 .tab:hover {
   cursor: pointer;
   color: $primary-color;
@@ -116,7 +113,7 @@
 }
 
 .filter {
-   flex: 1 1 240px;
+  flex: 1 1 240px;
 }
 
 .flex-category,
@@ -148,7 +145,7 @@
 
 .select2-container .select2-selection {
   border-radius: 4px !important;
-  border: 2px solid #E9E9E9 !important;
+  border: 2px solid #e9e9e9 !important;
   padding: 8px;
 }
 
@@ -168,7 +165,7 @@
 .select2-dropdown {
   margin-top: 5px !important;
   border-radius: 10px !important;
-  border: 2px solid #E9E9E9 !important;
+  border: 2px solid #e9e9e9 !important;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   padding: 24px;
@@ -182,15 +179,24 @@
   padding: 10px;
   width: 100%;
   z-index: 10;
-
+  flex-direction: column;
+  gap: 16px;
   margin-top: 5px !important;
   border-radius: 10px !important;
-  border: 2px solid #E9E9E9 !important;
+  border: 2px solid #e9e9e9 !important;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   padding: 24px;
-}
 
+  div {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
+}
+.dropdown-menu.active {
+  display: flex;
+}
 .dropdown-menu label {
   display: block;
   margin-top: 5px;
@@ -199,7 +205,7 @@
 
 .dropdown-menu input {
   width: calc(100% - 24px);
-  background-color: #F7F7F7;
+  background-color: #f7f7f7;
   padding: 10px 5px;
   text-align: center;
 }
@@ -239,9 +245,10 @@
   background-color: #666;
 }
 
-
 /* Style des options sélectionnées */
-.select2-container--default .select2-selection--multiple .select2-selection__choice {
+.select2-container--default
+  .select2-selection--multiple
+  .select2-selection__choice {
   background-color: $primary-color !important;
   /* Couleur noire */
   color: white !important;
@@ -250,10 +257,13 @@
   font-size: 16px;
 }
 
-
 /* Assurer que le placeholder est bien visible */
-.select2-container--default .select2-selection--single .select2-selection__placeholder,
-.select2-container--default .select2-selection--multiple .select2-selection__placeholder {
+.select2-container--default
+  .select2-selection--single
+  .select2-selection__placeholder,
+.select2-container--default
+  .select2-selection--multiple
+  .select2-selection__placeholder {
   display: block !important;
   visibility: visible !important;
   color: #888 !important;
@@ -278,11 +288,12 @@
 /* Style des options au survol */
 .select2-container--default .select2-results__option {
   padding: 12px 24px !important;
-  background-color: #F7F7F7 !important;
+  background-color: #f7f7f7 !important;
   border-radius: 5px !important;
 }
 
-.select2-container--default .select2-results__option--highlighted[aria-selected] {
+.select2-container--default
+  .select2-results__option--highlighted[aria-selected] {
   background-color: $primary-color !important;
   color: white !important;
   font-weight: 500;
@@ -291,7 +302,9 @@
   opacity: 0.95;
 }
 
-.select2-container--default .select2-selection--multiple .select2-selection__choice__remove:hover {
+.select2-container--default
+  .select2-selection--multiple
+  .select2-selection__choice__remove:hover {
   color: rgb(255, 255, 255) !important;
 }
 
@@ -309,7 +322,6 @@
   width: 100%;
   border: 2px solid #e9e9e9;
 }
-
 
 .card-designer,
 .card-oeuvre {
@@ -345,7 +357,7 @@
   font-weight: 500;
   text-transform: uppercase;
   margin-top: 8px;
-  color: #FFF;
+  color: #fff;
 }
 
 .card-designer .country-card-designer,
@@ -353,9 +365,8 @@
   font-size: 14px;
   font-weight: 300;
   text-transform: uppercase;
-  color: #FFF;
+  color: #fff;
 }
-
 
 .inner-card-designer,
 .inner-card-oeuvre {
@@ -389,7 +400,6 @@
     padding: 16px 32px;
   }
 
-
   // filtres
   .filters {
     flex-direction: column;
@@ -413,7 +423,6 @@
     row-gap: 16px;
     padding: 24px 0;
   }
-
 
   .card-category {
     width: 43vw;
@@ -439,7 +448,7 @@
   }
 }
 
-@media screen and (min-width:426px) and (max-width: 600px) {
+@media screen and (min-width: 426px) and (max-width: 600px) {
   .suggestions-box {
     width: 85vw;
   }
@@ -456,13 +465,11 @@
   // Tabs
   .tabs {
     margin-top: 24px;
-
   }
 
   .tab {
     padding: 12px 18px;
   }
-
 
   // filtres
   .filters {
@@ -488,7 +495,6 @@
     padding: 24px 0;
   }
 
-
   .card-category {
     width: 40vw;
     height: auto;
@@ -499,7 +505,6 @@
       width: 40%;
     }
   }
-
 
   .card-designer,
   .card-oeuvre {
@@ -514,7 +519,7 @@
   }
 }
 
-@media screen and (min-width:601px) and (max-width: 768px) {
+@media screen and (min-width: 601px) and (max-width: 768px) {
   .suggestions-box {
     width: 80vw;
   }
@@ -522,13 +527,11 @@
   // Tabs
   .tabs {
     margin-top: 24px;
-
   }
 
   .tab {
     padding: 12px 18px;
   }
-
 
   // filtres
 
@@ -570,8 +573,7 @@
   }
 }
 
-@media screen and (min-width:769px) and (max-width: 1024px) {
-
+@media screen and (min-width: 769px) and (max-width: 1024px) {
   .flex-category,
   .flex-container {
     row-gap: 16px;
@@ -585,7 +587,7 @@
     gap: 16px;
 
     img {
-      width: 70px
+      width: 70px;
     }
   }
 
@@ -602,8 +604,7 @@
   }
 }
 
-@media screen and (min-width:1025px) and (max-width: 1280px) {
-
+@media screen and (min-width: 1025px) and (max-width: 1280px) {
   .flex-category,
   .flex-container {
     column-gap: 16px;
@@ -618,7 +619,7 @@
     gap: 16px;
 
     img {
-      width: 70px
+      width: 70px;
     }
   }
 
@@ -646,10 +647,8 @@
   position: relative;
   gap: 54px;
   height: 140px;
-  margin: 48px 0
+  margin: 48px 0;
 }
-
-
 
 .timeline-item {
   display: inline-block;
@@ -714,7 +713,6 @@
   align-items: start;
   gap: 8px;
 }
-
 
 .oeuvre {
   width: 35px;
@@ -793,7 +791,6 @@
   cursor: pointer;
 }
 
-
 body.dark-mode {
   .tab {
     color: $text-color-dark;
@@ -803,7 +800,6 @@ body.dark-mode {
       border-bottom: 3px solid $primary-color-dark;
     }
   }
-
 
   .tab:hover {
     color: $primary-color-dark;
@@ -830,7 +826,9 @@ body.dark-mode {
     background-color: $secondary-color-dark;
   }
 
-  .select2-container--default .select2-selection--multiple .select2-selection__choice {
+  .select2-container--default
+    .select2-selection--multiple
+    .select2-selection__choice {
     background-color: $primary-color-dark !important;
     color: $secondary-color-dark !important;
   }
@@ -839,7 +837,8 @@ body.dark-mode {
     background-color: $primary-color-dark !important;
   }
 
-  .select2-container--default .select2-results__option--highlighted[aria-selected] {
+  .select2-container--default
+    .select2-results__option--highlighted[aria-selected] {
     background-color: $primary-color-dark !important;
     color: $secondary-color-dark !important;
   }
