--- a/app/views/designers/_designer.html.erb
+++ b/app/views/designers/_designer.html.erb
@@ -394,7 +394,7 @@
               </div>
               <div class="naviguation-buttons">
                 <%= link_to "Ajouter un autre designer", add_elements_path, class: "button" %>
-                <%= link_to "Retour", add_elements_path_path, class: "button" %>
+                <%= link_to "Retour", add_elements_path, class: "button" %>
               </div>
             </div>
           </div>
