--- a/app/assets/stylesheets/pages/_log.scss
+++ b/app/assets/stylesheets/pages/_log.scss
@@ -1,4 +1,4 @@
-@import 'abstracts/variables';
+@import "abstracts/variables";
 
 .logo-log {
   margin-left: 32px;
@@ -6,7 +6,7 @@
 
 .log {
   position: relative;
-  background-image: url('/assets/bg-presentation.png');
+  background-image: url("/assets/bg-presentation.webp");
   background-repeat: no-repeat;
   background-size: cover;
   padding: 32px 0;
@@ -14,7 +14,7 @@
 }
 
 .box-log {
-  padding: 0px 8vw
+  padding: 0px 8vw;
 }
 
 .box-log h1 {
@@ -137,13 +137,13 @@
   color: #fff;
 }
 
-@media screen and (min-width:769px) and (max-width: 1024px) {
+@media screen and (min-width: 769px) and (max-width: 1024px) {
   .log {
     padding-bottom: 96px;
   }
 
   .box-log {
-    padding: 0px 4vw
+    padding: 0px 4vw;
   }
 
   .form {
@@ -161,13 +161,13 @@
   }
 }
 
-@media screen and (min-width:601px) and (max-width: 768px) {
+@media screen and (min-width: 601px) and (max-width: 768px) {
   .log {
     padding-bottom: 96px;
   }
 
   .box-log {
-    padding: 0px 4vw
+    padding: 0px 4vw;
   }
 
   .form {
@@ -200,7 +200,7 @@
   }
 }
 
-@media screen and (min-width:426px) and (max-width: 600px) {
+@media screen and (min-width: 426px) and (max-width: 600px) {
   .box-log h1 {
     margin-top: 165px;
   }
@@ -209,21 +209,20 @@
     width: 30vw;
     min-width: 160px;
   }
-
 }
 
-@media screen and (min-width:0px) and (max-width: 600px) {
+@media screen and (min-width: 0px) and (max-width: 600px) {
   .log {
     padding-bottom: 96px;
   }
 
   .box-log {
-    padding: 0px 4vw
+    padding: 0px 4vw;
   }
 
   .form {
     width: 82vw;
-    padding: 24px 4vw
+    padding: 24px 4vw;
   }
 
   .actions {
@@ -252,7 +251,7 @@
   }
 }
 
-@media screen and (min-width:0px) and (max-width:425px) {
+@media screen and (min-width: 0px) and (max-width: 425px) {
   .logo-log {
     width: 40vw;
     min-width: 130px;
