--- a/app/views/pages/presentation.html.erb
+++ b/app/views/pages/presentation.html.erb
@@ -55,7 +55,7 @@
 <!-- SECTION BESOIN -->
 <section class="od-pres-section">
   <div class="od-pres-container">
-    <div class="od-pres-text">
+    <div class="od-pres-text left">
       <p>Un problème ?</p>
       <h2>Une plateforme née d’un besoin</h2>
       <p>
@@ -80,7 +80,7 @@
       <%= image_tag "landing/image-3.png", alt: "", class: "od-rounded-img left" %>
     </div>
     <div class="od-pres-text">
-      <p>Une pres</p>
+      <p>Une solution</p>
       <h2>Un carnet de références numériques</h2>
       <p>Accède à une base riche de références en constante évolution. Alimenté directement par la communauté.</p>
       <div class="od-pres-stats">
@@ -115,12 +115,13 @@
 </section>
 
 <!-- SECTION VIVANTE -->
-<section class="od-living-section">
-  <div class="od-living-container">
-    <div class="od-living-image">
+<section class="od-pres-section black">
+  <div class="od-pres-container">
+    <div class="od-pres-image">
       <%= image_tag "landing/image-5.png", alt: "", class: "od-rounded-img" %>
     </div>
-    <div class="od-living-text">
+    <div class="od-pres-text">
+      <p>ressource</p>
       <h2>Une ressource vivante, au service de tous</h2>
       <p>Omniscient Design n’est pas une simple bibliothèque d’images. C’est un outil pédagogique, exploratoire, et collaboratif...</p>
     </div>
